tests/language_tests/pass/0134_array_function_arguments_are_shared.ee
fn replace_first(values) {
    values[0] = "changed";
}

fn main() {
    let values = ["original", 2];
    replace_first(values);
    println(values[0]);
}
