tests/language_tests/fail/0101_pop_empty_array.ee
fn main() {
    let arr = [];
    pop(arr);
}
